--- a/src/style.css
+++ b/src/style.css
@@ -176,6 +176,10 @@ footer{
     border-top: 3px solid #F4F4F6;
 }
 
+.display{
+    display: none;
+}
+
 @media only screen and (min-width: 750px){
     nav{
         display: flex;
