--- a/src/style.css
+++ b/src/style.css
@@ -236,6 +236,44 @@ input:focus, textarea:focus, select:focus{
     background-color: blue;
 }
 
+.newPageForm{
+    height: 100vh;
+    display: flex;
+    min-width: 200px;
+    width: 400px;
+    flex-direction: column;
+    justify-content: center;
+    margin-bottom: 0px;
+    margin-right: 0px;
+    background-color: white;
+}
+
+.newForm{
+    width: 100%;
+    background-color: white;
+    display: flex;
+    justify-content: center;
+}
+
+.btn--cancel{
+    width: 100px;
+    height: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.btn--save{
+    width: 100px;
+    height: 40px;
+    margin-left: 10px;
+}
+
+.buttons--container{
+    display: flex;
+    justify-content: end;
+}
+
 
 @media only screen and (min-width: 750px){
     nav{
@@ -416,26 +454,9 @@ input:focus, textarea:focus, select:focus{
 
     .newPageForm{
         margin-left: 300px;
-        width: 50%;
-        height: 100vh;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        margin-bottom: 0;
     }
 
-    .btn--cancel{
-        width: 150px;
-        height: 54px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
 
-    .buttons--container{
-        display: flex;
-        justify-content: space-between;
-    }
 }
 
 
